trunk/Archive2/f3/9105565e0dcd8b/output
main.cpp: In instantiation of 'static T ThreadSafeFromString<T>::convert(const string&) [with T = int; std::string = std::basic_string<char>]':
main.cpp:71:44:   required from here
main.cpp:37:36: error: cannot call member function 'bool ThreadSafeFromString<T>::isFloat(const string&) [with T = int; std::string = std::basic_string<char>]' without object
             else if ( isFloat(value) )
                                    ^
main.cpp:41:37: error: cannot call member function 'bool ThreadSafeFromString<T>::isDouble(const string&) [with T = int; std::string = std::basic_string<char>]' without object
             else if ( isDouble(value) )
                                     ^
main.cpp: In instantiation of 'static T ThreadSafeFromString<T>::convert(const string&) [with T = float; std::string = std::basic_string<char>]':
main.cpp:72:46:   required from here
main.cpp:37:36: error: cannot call member function 'bool ThreadSafeFromString<T>::isFloat(const string&) [with T = float; std::string = std::basic_string<char>]' without object
             else if ( isFloat(value) )
                                    ^
main.cpp:41:37: error: cannot call member function 'bool ThreadSafeFromString<T>::isDouble(const string&) [with T = float; std::string = std::basic_string<char>]' without object
             else if ( isDouble(value) )
                                     ^
main.cpp: In instantiation of 'static T ThreadSafeFromString<T>::convert(const string&) [with T = double; std::string = std::basic_string<char>]':
main.cpp:77:87:   required from here
main.cpp:37:36: error: cannot call member function 'bool ThreadSafeFromString<T>::isFloat(const string&) [with T = double; std::string = std::basic_string<char>]' without object
             else if ( isFloat(value) )
                                    ^
main.cpp:41:37: error: cannot call member function 'bool ThreadSafeFromString<T>::isDouble(const string&) [with T = double; std::string = std::basic_string<char>]' without object
             else if ( isDouble(value) )
                                     ^
main.cpp: In static member function 'static T ThreadSafeFromString<T>::convert(const string&) [with T = int; std::string = std::basic_string<char>]':
main.cpp:64:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
main.cpp: In static member function 'static T ThreadSafeFromString<T>::convert(const string&) [with T = float; std::string = std::basic_string<char>]':
main.cpp:64:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
main.cpp: In static member function 'static T ThreadSafeFromString<T>::convert(const string&) [with T = double; std::string = std::basic_string<char>]':
main.cpp:64:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
